# ender

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PLAN_SUBSCRIPCIONES_QVAPAY.md  README.es.md  README.md  celeryconfig.py  deployment.md  development.md  docker-compose-dev.yml  docker-compose.override.yml  docker-compose.yml  env.example  main.py  openapi.json  pyproject.toml  release-notes.md  requirements.dev.txt  requirements.in  requirements.txt
.copier/: .copier-answers.yml
backend/: Dockerfile  fly.toml  pyproject.toml  requirements.txt
backend/app/: crud.py  initial_data.py  main.py  models.py  utils.py
backend/app/alembic/versions/: 0b6b4fad4996_add_fcm_token_to_smsdevice.py  269f5c9fb0f6_add_system_config_table.py  306ad2248fd6_add_payment_method_to_subscription.py  38a2c006503e_add_sms_models.py  3c714296816f_add_subscription_and_payment_tables.py  54e4a8f7c08c_add_email_verification_fields_to_user.py  7072efaa93c4_add_oauth_accounts_table.py  9c0a54914c78_add_max_length_for_string_varchar_.py  af127e65d03b_initial_schema.py  b222bbb50d90_add_provider_user_uuid_to_subscription.py  b2c3d4e5f6a7_bulk_sms_recipients.py  c3d4e5f6a7b8_remove_device_status.py  db80539b8422_add_smsoutbox_table.py
backend/app/api/: deps.py  main.py  ws.py
backend/app/api/routes/: android.py  api_keys.py  internal.py  login.py  oauth.py  plans.py  sms.py  subscriptions.py  system_config.py  users.py  utils.py  webhooks.py
backend/app/core/: celery_app.py  config.py  rate_limit.py  security.py
backend/app/services/: config_service.py  fcm_service.py  notification_dispatcher.py  qstash_service.py  quota_service.py  sms_service.py  subscription_service.py  webhook_service.py  websocket_manager.py
backend/app/services/email/: __init__.py  base.py  email_service.py  maileroo_provider.py  smtp_provider.py
backend/app/services/oauth/: __init__.py  base.py  github_provider.py  google_provider.py  oauth_service.py
backend/app/services/payment/: __init__.py  base.py  payment_service.py  qvapay_provider.py  tropipay_provider.py
backend/app/tasks/: __init__.py  sms_tasks.py
backend/tests/: conftest.py
backend/tests/api/routes/: test_plans.py  test_sms.py  test_webhooks.py
backend/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/tests/services/: test_fcm_service.py  test_notification_dispatcher.py
docs/: README.md
frontend/: .env  .env.example  .gitignore  Dockerfile  Dockerfile.playwright  design-system.html  openapi-ts.config.ts  (+3 more)
(+157 files in other folders)
